--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,11 @@
-== README
+== README Now ....or suffer the consequences :>
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Using Ruby version 1.9.3
 
 * System dependencies
 
